--- a/Lab3-RegresionLineal/regresionLineal.ipynb
+++ b/Lab3-RegresionLineal/regresionLineal.ipynb
@@ -1,20 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Laboratorio 3 - Regresión Lineal\n",
     "## Autor: Javier Mombiela\n",
-    "## Fecha: 07-03-2023\n"
+    "## Fecha: 07-03-2023"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
